objects/advpm__Advologix_Planner_Options__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>System settings used by Advologix internally.</description>
    <fields>
        <fullName>advpm__BillingPreview_Show_My_Matters_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(BillingPreview) Show My Matters Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Hide_Completed_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Cal) Hide Completed Tasks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Matter_ListView_ID__c</fullName>
        <label>(Cal) Matter ListView ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_Activities_With_Matters_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Cal) Show Activities With Matters Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_Day_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Cal) Show Day View?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_Events__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Cal) Show Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_Matter_Key_Dates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Cal) Show Matter Key Dates?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_My_Activities_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Cal) Show My Activities Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_My_Matters_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Cal) Show My Matters Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_Related_Matters_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Cal) Show Related Matters Data?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_Tasks__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Cal) Show Tasks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Cal) Show Time?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_Weekends__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Cal) Show Weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Cal_Show_n_Days__c</fullName>
        <defaultValue>1</defaultValue>
        <label>(Cal) Show n-Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Files_Table_Sort_Settings__c</fullName>
        <label>(Files) Table Sort Settings</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__FocusMattersApp_Enhanced_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(FocusMattersApp) Enhanced View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Gantt_Hide_Completed_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Gantt) Hide Completed Tasks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Gantt_Matter_ListView_ID__c</fullName>
        <label>(Gantt) Matter ListView ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Gantt_Show_Events__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Gantt) Show Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Gantt_Show_Matter_Key_Dates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Gantt) Show Matter Key Dates?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Gantt_Show_My_Activities_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Gantt) Show My Activities Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Gantt_Show_My_Matters_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Gantt) Show My Matters Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Gantt_Show_Related_Matters_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Gantt) Show Related Matters Data?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Gantt_Show_Tasks__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Gantt) Show Tasks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__MatterHierarchy_Chart_Flat_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(MatterHierarchy) Chart Flat View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__MatterHierarchy_Hide_Role_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(MatterHierarchy) Hide Role Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__MatterHierarchy_Hide_Type_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(MatterHierarchy) Hide Type Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__MatterHierarchy_Show_In_Chart_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(MatterHierarchy) Show In Chart View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__MyMatters_Table_State_Settings__c</fullName>
        <label>(FocusMatters) Table State Settings</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__ParticipationMap_Hide_Role_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(ParticipationMap) Hide Role Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__ParticipationMap_Hide_Type_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(ParticipationMap) Hide Type Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__RelatedEmails_ListView_State_Settings__c</fullName>
        <label>(RelatedEmails) ListView State Settings</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Timeline_Hide_Key_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Timeline) Hide Key Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Timeline_ListView_State_Settings__c</fullName>
        <label>(Timeline) ListView State Settings</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Timeline_Show_In_Chart_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Timeline) Show In Chart View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Timesheet_Show_Weekends__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Timesheet) Show Weekends</label>
        <type>Checkbox</type>
    </fields>
    <label>Advologix Planner Options</label>
</CustomObject>